# QtDoorbird

./: .travis.yml  CMakeLists.txt  README.md
localization/: QtDoorbird_cs_CZ.ts
resources/: resource.qrc
src/: credentialsdialog.cpp  credentialsdialog.h  credentialsdialog.ui  doorbirdclient.cpp  doorbirdclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
